--- a/Html-css/Exo2/traccia7/index.css
+++ b/Html-css/Exo2/traccia7/index.css
@@ -8,6 +8,8 @@ h1 {
 .container {
     margin-top: 30px;
     border: 1px solid #ff0000;
+    border: bottom 12px;
+    border-radius: 10px;
     padding: 10px;
 }
 p {
