--- a/ANGULAR-PROJECT/Myshop-stor/src/app/lista/lista.component.html
+++ b/ANGULAR-PROJECT/Myshop-stor/src/app/lista/lista.component.html
@@ -6,9 +6,9 @@
       </p>
   </div>
   <div id="home">
-      <app-article *ngFor="let element of lista" [titoloArticle]="element.titreArticle"
-          [prezzoArticle]="element.prezzoArticle" [descrizion]="element.descrizion" [urlImg]="element.urlImg"
-          [textAltImg]="element.textAltImg" [dispo]="element.dispo" [idArticle]="element.id"
-          (info)="onAffiche($event)"></app-article>
+      <app-articoli *ngFor="let element of lista" [titoloArticoli]="element.titreArticle"
+          [prezzoArticoli]="element.prezzoArticoli" [descrizion]="element.descrizion" [urlImg]="element.urlImg"
+          [textAltImg]="element.textAltImg" [dispo]="element.dispo" [idArticoli]="element.id"
+          (info)="onAffiche($event)"></app-articoli>
   </div>
 </div>
