update the file

--- a/ANGULAR-PROJECT/My-webapp/src/app/footer/footer.component.css
+++ b/ANGULAR-PROJECT/My-webapp/src/app/footer/footer.component.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #f5f5f5;
+  background-color: #24cbbe;
   padding: 40px 0;
 }
 
@@ -16,7 +16,125 @@
   color: #666;
 }
 
-.footer .footer-links {
-  padding-left: 0;
+.footer-contact {
+  margin-bottom: 30px;
+}
+
+.footer-contact h3 {
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 30px;
+  text-transform: uppercase;
+}
+
+.footer-contact p {
+  font-size: 14px;
+  line-height: 1.8;
+  color: #666;
+}
+
+.footer-contact .social-links a {
+  font-size: 18px;
+  display: inline-block;
+  background: #37a7a7;
+  color: #2ea1a8;
+  line-height: 1;
+  padding: 8px 0;
+  margin-right: 4px;
+  border-radius: 50%;
+  text-align: center;
+  width: 36px;
+  height: 36px;
+  transition: 0.3s;
+}
+
+.footer-contact .social-links a:hover {
+  background: #1f96ab;
+  color: #41c9d8;
+}
+
+.footer-links {
+  margin-bottom: 30px;
+}
+
+.footer-links h4 {
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 30px;
+  text-transform: uppercase;
+}
+
+.footer-links ul {
   list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer-links ul i {
+  padding-right: 2px;
+  color: #ffbb2c;
+  font-size: 18px;
+  line-height: 1;
+}
+
+.footer-links ul li {
+  padding: 10px 0;
+  display: flex;
+  align-items: center;
+}
+
+.footer-links ul a {
+  color: #666;
+  transition: 0.3s;
+  display: inline-block;
+  line-height: 1;
+}
+
+.footer-links ul a:hover {
+  text-decoration: underline;
+}
+
+.footer-newsletter {
+  margin-bottom: 30px;
+}
+
+.footer-newsletter h4 {
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 30px;
+  text-transform: uppercase;
+}
+
+.footer-newsletter form {
+  margin-top: 30px;
+  background: #2c87a8;
+  padding: 6px 10px;
+  position: relative;
+  border-radius: 3px;
+}
+
+.footer-newsletter form input[type="email"] {
+  border: 0;
+  padding: 4px 8px;
+  width: calc(100% - 110px);
+}
+
+.footer-newsletter form input[type="submit"] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  border: 0;
+  background: none;
+  font-size: 16px;
+  padding: 0 20px;
+  background: #ffbb2c;
+  color: #2d9c96;
+  transition: 0.3s;
+  border-radius: 0 3px 3px 0;
+}
+
+.footer-newsletter form input[type="submit"]:hover {
+  background: #37b2d0;
+  color: #20a1b2;
 }
