--- a/ANGULAR-PROJECT/My-webapp/src/app/home/home.component.html
+++ b/ANGULAR-PROJECT/My-webapp/src/app/home/home.component.html
@@ -3,126 +3,76 @@
 <!-- init section header-->
 <section>
   <header>
-    <nav>
-      <div class="logo">
-        <img src= "/ANGULAR-PROJECT/My-webapp/src/assets/Logo.png"alt="logo" />
-      </div>
-      <ul class="prix">
-        <li><a href="">Home</a></li>
-        <li>
-          <a href="">Chi siamo</a>
-          <ul>
-            <li><a href="">Chi siamo</a></li>
-            <li><a href="">Mission</a></li>
-          </ul>
-        </li>
-        <li>
-          <a href="">About</a>
-          <ul>
-            <li><a href="">Azienda</a></li>
-            <li><a href="">Mission</a></li>
-          </ul>
-        </li>
-        <li>
-          <a href="">Shop</a>
-          <ul>
-            <li><a href="">Pc</a></li>
-            <li><a href="">Mouse</a></li>
-            <li><a href="">Keyboard</a></li>
-          </ul>
-        </li>
-        <li><a href="">Contact</a></li>
-        <li><a href="">login </a></li>
-      </ul>
-    </nav>
+      <nav>
+        <ul class="menu">
+           <li class="logo"><a href="#">SergeGuea</a></li>
+           <li class="item button"><a href="#">Home</a></li>
+           <li class="item button"><a href="#">About</a></li>
+           <li class="item button"><a href="#">Services</a></li>
+           <li class="item button"><a href="#">Login</a></li>
+           <li class="item button secondary"><a href="#">Sign Up</a></li>
+           <li class="toggle"><span class="bars"></span></li>
+        </ul>
+     </nav>
   </header>
 </section>
 <!-- end section header-->
 
 <!--init section carousel-->
+<style>
+  .carousel{
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+  }
+  .carousel-inner{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    overflow: hidden;
+  }
+  .carousel-item{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .carousel-item img{
+    width: 80%;
+    height: 80%;
+    object-fit: cover;
+  }
+</style>
+<section>
+  <div class="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/ANGULAR-PROJECT/My-webapp/src/assets/slider2.jpg " alt="foto">
+      </div>
+      <div class="carousel-item">
+        <img src="/ANGULAR-PROJECT/My-webapp/src/assets/slider2.jpg" alt="slider2">
+      </div>
+      <div class="carousel-item">
+        <img src="/ANGULAR-PROJECT/My-webapp/src/assets/slider2.jpg" alt="slider3">
+      </div>
+    </div>
+  </div>
+</section>
 
   <!-- init section banner-->
+
   <section>
-    <div class="banner">
-      <div class="banner-text">
-        <h1>My web site</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-          quae.
-        </p>
-        <button>Read more</button>
+    <div class="i">
+      <div class="banner">
+        <div class="banner-text">
+          <h1>Benvenuto</h1>
+          <img src="" alt="">
+          <p>Benvenuto nella nostra pagina web</p>
+          <a href="" class="btn">Scopri di più</a>
+        </div>
       </div>
     </div>
   </section>
 
-  <!--<nav class="nav-menu d-none d-lg-block">
-				<ul>
-					<li class="active"><a th:href="@{/index}">Home</a></li>
-					<li class="inactive"><a href="/index">Home</a></li>
-					<li class="drop-down"><a href="#chiSiamo">Chi Siamo</a>
-						<ul>
-							<li><a href="/company/about-us">Digital Thinks</a></li>
-							<li><a href="/company/partners">Partner</a></li>
-							 <li><a href="#">Lavora Con NOI</a></li>
-							<li><a href="/company/offices">Sedi</a></li>
-							<li><a href="/forms/contact">Contattaci</a></li>
-							<li><a href="/legal/terms">Termini e Condizioni</a></li>
-							<li><a href="/legal/privacy">Privacy Policy</a></li>
-							<li><a href="/legal/cookies">Cookies Policy</a></li>
-							 <li><a href="#contatti">Contatti</a></li>
-						</ul>
-					</li>
-					<li class="drop-down">
-						<a href="#formazione">Formazione</a>
-						<ul>
-							<li><a href="/products/courses">Cerca Corso</a></li>
-							<li><a href="/products/catalog">Sfoglia il Catalogo Corsi</a></li>
-							<li><a href="/products/calendar">Calendario Corsi</a></li>
-
-							<li class="drop-down"><a href="#certificazione">Certificazioni</a>
-							  <ul>
-								<li><a href="/forms/certifications">Centro Esami</a></li>
-								<li><a href="/learning/microsoft">Microsoft</a></li>
-								<li><a href="/learning/itil">ITIL</a></li>
-								<li><a href="/learning/aws">AWS</a></li>
-								<li><a href="/learning/ec-council">EC-Council</a></li>
-							  </ul>
-							</li>
-							<li><a href="/learning/ambizione-italia">Ambizione Italia</a></li>
-							< <li><a th:href="@{/registrations}">Iscrizioni</a></li>
-							<li><a href="/forms/custom-course">Richiedi Corso Personalizzato</a></li>
-							<li><a th:href="@{/companies-services}">Servizi Alle Aziende</a></li>
-							<li><a href="/learning/mode-providing-courses">Modalitá Di Erogazione Corsi</a></li>
-							<li><a href="/learning/confirmed-courses">Opportunità</a></li>
-							 <li><a th:href="@{/learning/special-conditions}">Condizioni Speciali</a></li>
-							<li><a href="/learning/funded-training">Formazione Finanziata</a></li>
-						</ul>
-					</li>
-
-
-					<li class="drop-down">
-						<a href="#campus">Campus</a>
-						<ul>
-							<li><a href="/learning/campus">Macroaree Formative</a></li>
-							<li><a href="/learning/campus/01/Business_Application">Business Application</a></li>
-							<li><a href="/learning/campus/02/Security">Security</a></li>
-							<li><a href="/learning/campus/03/Dati">Dati</a></li>
-							<li><a href="/learning/campus/04/Sviluppo">Sviluppo</a></li>
-							<li><a href="/learning/campus/05/Infrastrutture">Infrastrutture</a></li>
-						</ul>
-					</li>
-
-					<li><a href="/events/list">Eventi</a></li>
-
-					<li><a href="#servizi">Servizi</a></li>
-					<li><a href="#">Consulenza</a></li>
-					<li><a href="#eventi">Eventi</a></li>
-
-					<li><a href="/security/login" title="Login"><i class="fas fa-user icon-search"></i></a></li>
-
-
-
-					<li><a href="#" id="menuItemSearch"><i class="fas fa-search icon-search"></i></a></li>
-				</ul>
-			</nav>-->
-
+  <!-- end section banner-->
