--- a/ANGULAR-PROJECT/My-webapp/src/app/footer/footer.component.html
+++ b/ANGULAR-PROJECT/My-webapp/src/app/footer/footer.component.html
@@ -1,90 +1,10 @@
-<style>
-  .footer {
-    background-color: #f5f5f5;
-    padding: 40px 0;
-  }
 
-  .title-par {
-    font-size: 20px;
-    font-weight: 700;
-    margin-bottom: 10px;
-    text-transform: uppercase;
-  }
-
-  .body-par {
-    font-size: 14px;
-    line-height: 1.8;
-    color: #666;
-  }
-
-  .footer-contact {
-    margin-bottom: 30px;
-  }
-
-  .footer-contact h3 {
-    font-size: 24px;
-    font-weight: 700;
-    margin-bottom: 30px;
-    text-transform: uppercase;
-  }
-
-  .footer-contact p {
-    font-size: 14px;
-    line-height: 1.8;
-    color: #666;
-  }
-
-  .footer-contact .social-links a {
-    font-size: 18px;
-    display: inline-block;
-    background: #e1e1e1;
-    color: #666;
-    line-height: 1;
-    padding: 8px 0;
-    margin-right: 4px;
-    border-radius: 50%;
-    text-align: center;
-    width: 36px;
-    height: 36px;
-    transition: 0.3s;
-  }
-
-  .footer-contact .social-links a:hover {
-    background: #d6d6d6;
-    color: #fff;
-  }
-
-  .footer-links {
-    margin-bottom: 30px;
-  }
-
-  .footer-links h4 {
-    font-size: 24px;
-    font-weight: 700;
-    margin-bottom: 30px;
-    text-transform: uppercase;
-  }
-
-  .footer-links ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  .footer-links ul i {
-    padding-right: 2px;
-    color: #ffbb2c;
-    font-size: 18px;
-    line-height: 1;
-  }
-</style>
-
+<!-- init footer-->
 <section class="footer-contact" style="padding: 20px 45px; margin-top: 50px">
   <div
     class="container aos-init aos-animate"
     data-aos="fade-up"
-    data-aos-delay="300"
-  >
+    data-aos-delay="300">
     <div class="row">
       <div class="col-12 d-flex p-2" style="text-align: justify"></div>
       <div class="col-12" style="text-align: justify">
@@ -108,28 +28,32 @@
   </div>
 </div>
 <!-- form-->
-<form action="">
-  <div class="form-group">
-    <label for="email">Email address:</label>
-    <input type="email" class="form-control" id="email" />
+<article class="about-section py-5">
+  <div class="container" style="background:rgb(40, 155, 163) ">
+  <form>
+    <div class= "form-group">
+      <label for="exampleInputEmail1">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    </div>
+    <div class="form-group">
+      <label for="exampleMessage">Message</label>
+      <textarea class="form-control" id="exampleMessage"></textarea>
+    </div>
+    <div class="form-group form-check">
+      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+      <label class="form-check-label" for="exampleCheck1">Subscribe to Newsletter</label>
+    </div>
+    <button type="submit" class="btn btn-primary">Send Message</button>
+    </form>
   </div>
-  <div class="form-group">
-    <label for="pwd">Password:</label>
-    <input type="password" class="form-control" id="pwd" />
-  </div>
-  <div class="checkbox">
-    <label><input type="checkbox" /> Remember me</label>
-  </div>
-  <button type="submit" class="btn btn-default">Submit</button>
-</form>
-
-<div class="footer-top" style="background: #f5f5f5">
+</article>
+<!-- form-->
+<div class="footer-top" style="background: white">
   <div class="container">
     <div class="row">
       <div class="col-lg-3 col-md-6 footer-contact">
         <h3>
-          <img src="/images/logo.png" alt="logo" class="img-fluid" />
-          My WebApp SRL
+          My WebApp <br />
         </h3>
         <p>
           Via virgilio, 19 <br />
@@ -148,16 +72,12 @@
           <li>
             <i class="bx bx-chevron-right"></i>
             <a
-              href="/ANGULAR-PROJECT/My-webapp/src/app/home/home.component.html"
-              >Home</a
-            >
+              href="/ANGULAR-PROJECT/My-webapp/src/app/home/home.component.html">Home</a>
           </li>
           <li>
             <i class="bx bx-chevron-right"></i>
             <a
-              href="/ANGULAR-PROJECT/My-webapp/src/app/chi-siamo/chi-siamo.component.html"
-              >Chi Siamo</a
-            >
+              href="/ANGULAR-PROJECT/My-webapp/src/app/chi-siamo/chi-siamo.component.html">Chi Siamo</a>
           </li>
           <li>
             <i class="bx bx-chevron-right"></i>
@@ -183,22 +103,17 @@
         <h4>Social network</h4>
         <p>Contattaci sui Social</p>
         <div class="social-links mt-3">
-          <a href="https://www.instagram.com/serge_guea" class="instagram"
-            ><i class="bx bxl-instagram"></i
-          ></a>
-          <a href="https://www.linkedin.com/sergeguea" class="linkedin"
-            ><i class="bx bxl-linkedin"></i
-          ></a>
+          <a href="https://www.instagram.com/serge_guea" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.linkedin.com/sergeguea" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
     </div>
   </div>
 
   <div class="container py-4 footer-copyright">
-    <div class="copyright">
-      © Copyright <strong><span>My-webApp </span></strong> All Rights Reserved
+    <div class="copyright" style="text-align: center">
+      © Copyright <strong><span>My webApp </span></strong> Tutti i diritti riservati
     </div>
-    <div class="credits">Designed by Serge Guea</div>
   </div>
 </div>
 
