--- a/ANGULAR-PROJECT/My-webapp/src/app/home/home.component.css
+++ b/ANGULAR-PROJECT/My-webapp/src/app/home/home.component.css
@@ -1,177 +1,72 @@
-ol,
-ul {
-  list-style: none;
-}
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
+/* Style per il menu container */
+.menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  background-color: #27b3b8;
 }
 
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-a {
-  color: inherit;
+/* Style per il logo */
+.logo a {
+  font-size: 24px;
+  font-weight: bold;
+  color: #fff;
   text-decoration: none;
 }
-img {
-  width: 100%;
-  height: auto;
-}
 
-header {
-  position: fixed;
-  width: 100%;
-  height: 80px;
-  background-color: rgba(27, 28, 28, 0.9);
-  border-bottom: 1px solid #fff;
-  box-shadow: 0px 10px 22px -7px rgb(0 0 0 / 50%);
-}
-
-ul {
-  margin-inline-end: 0px;
-  padding-inline-start: 0px;
-}
-
-header ul.prix li {
+/* Style per il menu items */
+.item {
   list-style: none;
-  float: left;
-  color: #fff;
-  text-transform: uppercase;
-  margin: 10px;
-  position: relative;
-}
-header ul.prix li:last-child {
-  float: right;
-}
-header ul.prix li a {
-  padding: 15px;
 }
 
-header ul.prix li ul {
-  position: absolute;
-  background-color: #57849a;
-  top: 25px;
-  left: -10px;
-  display: none;
-  opacity: 0;
-  transition: all 1s;
-}
-
-header ul.prix li:hover > ul {
+.item a {
   display: block;
-  opacity: 1;
+  padding: 10px;
+  font-size: 18px;
+  color: #2098a6;
+  text-decoration: none;
 }
 
-header nav {
-  width: 800px;
-  margin: 0 auto;
-  position: relative;
+/* Style per il buttons */
+.button {
+  background-color:white;
+  color: #fff;
+  border-radius: 4px;
+  padding: 10px 20px;
+  margin-right: 10px;
+  text-transform: uppercase;
 }
-header nav .logo {
-  float: left;
-  width: 150px;
-  margin: 20px 15px 0 0;
-}
-header nav ul.prix {
-  float: left;
-  width: calc(100% - 175px);
-  margin: 17px 0 0 0;
-}
-section.banner {
-    background-image: url("/ANGULAR-PROJECT/My-webapp/src/assets/1.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
 
-  section.banner .banner-text {
-    text-align: center;
-    color: #fff;
-  }
-  h1 {
-    font-size: 4rem;
-    margin-bottom: 1rem;
-  }
-  p {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
-  }
-  button {
-    padding: 1rem 2rem;
-    border: none;
-    background-color: #fff;
-    color: #000;
-    font-size: 1.5rem;
-    cursor: pointer;
-  }
-  button:hover {
-    background-color: #000;
-    color: #fff;
-  }
-  .carousel {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .carousel-item {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .carousel-item img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  .carousel-item:nth-child(1) {
-    background-image: url("/ANGULAR-PROJECT/My-webapp/src/assets/1.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-  .carousel-item:nth-child(2) {
-    background-image: url("/ANGULAR-PROJECT/My-webapp/src/assets/2.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-  .carousel-item:nth-child(3) {
-    background-image: url("/ANGULAR-PROJECT/My-webapp/src/assets/3.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-  .carousel-item:nth-child(4) {
-    background-image: url("/ANGULAR-PROJECT/My-webapp/src/assets/4.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-  .carousel-item:nth-child(5) {
-    background-image: url("/ANGULAR-PROJECT/My-webapp/src/assets/5.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
+/* Style per il secongo button */
+.secondary {
+  background-color: #f2f2f2;
+  color: #333;
+}
 
+.secondary:hover {
+  background-color: #333;
+  color: #fff;
+}
+
+/* Style per il toggle button */
+.toggle {
+  cursor: pointer;
+}
+
+.bars {
+  display: block;
+  width: 30px;
+  height: 5px;
+  background-color: #333;
+  margin: 5px 0;
+}
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #27b3b8;
+  padding: 20px;
+  z-index: 1;
+}
