--- a/ANGULAR-PROJECT/My-webapp/src/styles.css
+++ b/ANGULAR-PROJECT/My-webapp/src/styles.css
@@ -1,50 +1,28 @@
-/* You can add global styles to this file, and also import other style files */
+
+
 
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-}
 
-a {
-  color: inherit;
-  text-decoration: none;
 }
-
-img {
-  width: 100%;
-  height: auto;
-}
-
-header {
+footer {
   position: fixed;
+  left: 0;
+  bottom: 0;
   width: 100%;
-  height: 80px;
-  background-color: rgba(27, 28, 28, 0.9);
-  border-bottom: 1px solid #fff;
+  background-color: rgb(72 132 175 / 90%);
+  color: white;
+  text-align: center;
+  border-top: 1px solid #fff;
   box-shadow: 0px 10px 22px -7px rgb(0 0 0 / 50%);
 }
-
 ul {
   margin-inline-end: 0px;
   padding-inline-start: 0px;
 }
 
-header ul.prix li {
-  list-style: none;
-  float: left;
-  color: #fff;
-  text-transform: uppercase;
-  margin: 10px;
-  position: relative;
-}
 
-header ul.prix li:last-child {
-  float: right;
-}
-
-header ul.prix li a {
-  padding: 15px;
-}
 
 
 
