i will changes the name of the project

--- a/My-webapp/src/app/footer/footer.component.html
+++ b/My-webapp/src/app/footer/footer.component.html
@@ -10,10 +10,9 @@
       <div class="col-12" style="text-align: justify">
         <hr style="border-top: 1px solid #1c1835" />
         Siamo a tua disposizione per qualsiasi informazione.
-        <a href="/forms/contact" style="text-decoration: underline">Compila il modulo di contatto</a>,
+        <a href="" style="text-decoration: underline">Compila il modulo di contatto</a>,
          telefona al numero +39 38 92 978 507 oppure scrivi a
-        <a href="mailto:gueaserge2@gmail.com" style="text-decoration: underline">gueaserge2@gmail.com</a
-        >
+        <a href="mailto:gueaserge2@gmail.com" style="text-decoration: underline">gueaserge2@gmail.com</a>
       </div>
     </div>
   </div>
