--- a/My-webapp/src/app/footer/footer.component.html
+++ b/My-webapp/src/app/footer/footer.component.html
@@ -1,118 +1,95 @@
-
 <!-- init footer-->
-<section class="footer-contact" style="padding: 20px 45px; margin-top: 50px">
-  <div
-    class="container aos-init aos-animate"
-    data-aos="fade-up"
-    data-aos-delay="300">
-    <div class="row">
-      <div class="col-12 d-flex p-2" style="text-align: justify"></div>
-      <div class="col-12" style="text-align: justify">
-        <hr style="border-top: 1px solid #1c1835" />
-        Siamo a tua disposizione per qualsiasi informazione.
-        <a href="" style="text-decoration: underline">Compila il modulo di contatto</a>,
-         telefona al numero +39 38 92 978 507 oppure scrivi a
-        <a href="mailto:gueaserge2@gmail.com" style="text-decoration: underline">gueaserge2@gmail.com</a>
+<section class="footer-contact" style="padding: 20px 45px; margin-top: 50px;">
+  <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
+      <div class="row">
+          <div class="col-12 d-flex p-2" style="text-align: justify;"></div>
+          <div class="col-12" style="text-align: justify;">
+              <hr style="border-top: 1px solid #1c1835;" />
+              Siamo a tua disposizione per qualsiasi informazione.
+              <a href="" style="text-decoration: underline;">Compila il modulo di contatto</a>, telefona al numero +39 38 92 978 507 oppure scrivi a
+              <a href="mailto:gueaserge2@gmail.com" style="text-decoration: underline;">gueaserge2@gmail.com</a>
+          </div>
       </div>
-    </div>
   </div>
 </section>
 <div>
   <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <hr style="border-top: 1px solid #1c1835" />
+      <div class="row">
+          <div class="col-12">
+              <hr style="border-top: 1px solid #1c1835;" />
+          </div>
       </div>
-    </div>
   </div>
 </div>
 <!-- form-->
 <article class="about-section py-5">
-  <div class="container" style="background:rgb(40, 155, 163) ">
-  <form>
-    <div class= "form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    </div>
-    <div class="form-group">
-      <label for="exampleMessage">Message</label>
-      <textarea class="form-control" id="exampleMessage"></textarea>
-    </div>
-    <div class="form-group form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">Subscribe to Newsletter</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Send Message</button>
-    </form>
+  <div class="container" style="background: rgb(40, 155, 163);">
+      <form>
+          <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
+          </div>
+          <div class="form-group">
+              <label for="Message">Message</label>
+              <textarea class="form-control" id="Message"></textarea>
+          </div>
+          <div class="form-group form-check">
+              <input type="checkbox" class="form-check-input" id="exampleCheck1" />
+              <label class="form-check-label" for="exampleCheck1">Subscribe to Newsletter</label>
+          </div>
+          <button type="submit" class="btn btn-primary">Invia Messaggi</button>
+      </form>
   </div>
 </article>
 <!-- form-->
-<div class="footer-top" style="background: white">
+<div class="footer-top" style="background: rgb(40, 175, 175);">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-3 col-md-6 footer-contact">
-        <h3>
-          My WebApp <br />
-        </h3>
-        <p>
-          Via virgilio, 19 <br />
-          Formia <br />
-          04023 (LT), Italia<br />
-          <br />
-          <strong>Phone:</strong> +39 3892978507<br />
-          <strong>Email:</strong
-          ><a href="mailto:gueaserge2@gmail.com">gueaserge2@gmail.com</a><br />
-        </p>
-      </div>
+      <div class="row">
+          <div class="col-lg-3 col-md-6 footer-contact">
+              <h3>My WebApp <br /></h3>
+              <p>
+                  Via virgilio, 19 <br />
+                  Formia <br />
+                  04023 (LT), Italia<br />
+                  <br />
+                  <strong>Phone:</strong> +39 3892978507<br />
+                  <strong>Email:</strong><a href="mailto:gueaserge2@gmail.com">gueaserge2@gmail.com</a><br />
+              </p>
+          </div>
 
-      <div class="col-lg-3 col-md-6 footer-links">
-        <h4>Link utili</h4>
-        <ul>
-          <li>
-            <i class="bx bx-chevron-right"></i>
-            <a
-              href="/ANGULAR-PROJECT/My-webapp/src/app/home/home.component.html">Home</a>
-          </li>
-          <li>
-            <i class="bx bx-chevron-right"></i>
-            <a
-              href="/ANGULAR-PROJECT/My-webapp/src/app/chi-siamo/chi-siamo.component.html">Chi Siamo</a>
-          </li>
-          <li>
-            <i class="bx bx-chevron-right"></i>
-            <a href="/">Termini e Condizioni</a>
-          </li>
-          <li>
-            <i class="bx bx-chevron-right"></i> <a href="/">Privacy Policy</a>
-          </li>
-        </ul>
-      </div>
+          <div class="col-lg-3 col-md-6 footer-links">
+              <h4>Link utili</h4>
+              <ul>
+                  <li>
+                      <i class="bx bx-chevron-right"></i>
+                      <a href="/My-webapp/src/app/home/home.component.html">Home</a>
+                  </li>
+                  <li>
+                      <i class="bx bx-chevron-right"></i>
+                      <a href="/My-webapp/src/app/chi-siamo/chi-siamo.component.html">Chi Siamo</a>
+                  </li>
+                  <li>
+                      <i class="bx bx-chevron-right"></i>
+                      <a href="/My-webapp/src/app/termini-e-condizioni/termini-e-condizioni.component.html">Termini e Condizioni</a>
+                  </li>
+              </ul>
+          </div>
 
-      <div class="col-lg-3 col-md-6 footer-links">
-        <h4>I Nostri servizi</h4>
-        <ul>
-          <li>
-            <i class="bx bx-chevron-right"></i> <a href="/">Cerca servizi</a>
-          </li>
-          <li><i class="bx bx-chevron-right"></i> <a href="/">Catalogo</a></li>
-        </ul>
+          <div class="col-lg-3 col-md-6 footer-links">
+              <h4>Social network</h4>
+              <p>Contattaci sui Social</p>
+              <div class="social-links mt-3">
+                  <a href="https://www.instagram.com/sergeguea3" class="instagram"><i class="bx bxl-instagram"></i></a>
+                  <a href="https://www.linkedin.com/sergeguea" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              </div>
+          </div>
       </div>
-
-      <div class="col-lg-3 col-md-6 footer-links">
-        <h4>Social network</h4>
-        <p>Contattaci sui Social</p>
-        <div class="social-links mt-3">
-          <a href="https://www.instagram.com/serge_guea" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://www.linkedin.com/sergeguea" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        </div>
-      </div>
-    </div>
   </div>
 
   <div class="container py-4 footer-copyright">
-    <div class="copyright" style="text-align: center">
-      © Copyright <strong><span>My webApp </span></strong> Tutti i diritti riservati
-    </div>
+      <div class="copyright" style="text-align: center;">
+          © Copyright <strong><span>My webApp </span></strong> Tutti i diritti riservati 2023 by Serge Guea
+      </div>
   </div>
 </div>
 
