--- a/My-webapp/src/app/home/home.component.html
+++ b/My-webapp/src/app/home/home.component.html
@@ -1,78 +1,64 @@
-
-
 <!-- init section header-->
 <section>
   <header>
-      <nav>
-        <ul class="menu">
-           <li class="logo"><a href="#">SergeGuea</a></li>
-           <li class="item button"><a href="#">Home</a></li>
-           <li class="item button"><a href="#">About</a></li>
-           <li class="item button"><a href="#">Services</a></li>
-           <li class="item button"><a href="#">Login</a></li>
-           <li class="item button secondary"><a href="#">Sign Up</a></li>
-           <li class="toggle"><span class="bars"></span></li>
-        </ul>
-     </nav>
+    <nav>
+      <ul class="menu">
+        <li class="logo"><a href="#">SergeGuea</a></li>
+        <li class="item "><a href="#">Home</a></li>
+        <li class="item "><a href="#">Chi siamo</a></li>
+        <li class="item "><a href="#">Mission</a></li>
+        <li class="item "><a href="#">Login</a></li>
+        <li class="item  "><a href="#">Sign Up</a></li>
+        <li class="toggle"><span class="bars"></span></li>
+      </ul>
+    </nav>
   </header>
 </section>
 <!-- end section header-->
+<style>
+  .img-fluid {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: relative;
+  }
+
+</style>
+<div class="img-fluid">
+  <img
+    src="/My-webapp/src/assets/img/slider2.jpg"
+    alt="slider2"
+    class="img-fluid"
+  />
+
+</div>
+<div>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <hr style="border-top: 5px solid #1c1835" />
+      </div>
+    </div>
+  </div>
+</div>
 
 <!--init section carousel-->
-<style>
-  .carousel{
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-  }
-  .carousel-inner{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    overflow: hidden;
-  }
-  .carousel-item{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .carousel-item img{
-    width: 80%;
-    height: 80%;
-    object-fit: cover;
-  }
-</style>
+
 <section>
   <div class="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/ANGULAR-PROJECT/My-webapp/src/assets/slider2.jpg " alt="foto">
+        <img src="/My-webapp/src/assets/img/images.jpg" alt="foto" />
       </div>
       <div class="carousel-item">
-        <img src="/ANGULAR-PROJECT/My-webapp/src/assets/slider2.jpg" alt="slider2">
+        <img src="/My-webapp/src/assets/img/slider2.jpg" alt="slider2" />
       </div>
       <div class="carousel-item">
-        <img src="/ANGULAR-PROJECT/My-webapp/src/assets/slider2.jpg" alt="slider3">
+        <img src="/My-webapp/src/assets/img/slider3.jpg" alt="slider3" />
       </div>
     </div>
   </div>
 </section>
 
-  <!-- init section banner-->
+<!--end section carousel-->
 
-  <section>
-    <div class="i">
-      <div class="banner">
-        <div class="banner-text">
-          <h1>Benvenuto</h1>
-          <img src="" alt="">
-          <p>Benvenuto nella nostra pagina web</p>
-          <a href="" class="btn">Scopri di più</a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end section banner-->
