--- a/My-webapp/src/app/home/home.component.css
+++ b/My-webapp/src/app/home/home.component.css
@@ -1,72 +1,102 @@
-/* Style per il menu container */
-.menu {
+
+body {
+  font-family: Arial, sans-serif;
+  font-size: 20px;
+}
+
+
+section {
+  background-color: #2ac4bf;
+  padding: 50px;
+}
+
+
+header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
-  background-color: #27b3b8;
 }
 
-/* Style per il logo */
-.logo a {
-  font-size: 24px;
-  font-weight: bold;
-  color: #fff;
-  text-decoration: none;
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-/* Style per il menu items */
-.item {
+
+.menu {
   list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+
+
+.logo {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+
+.item {
+  margin-left: 160px;
 }
 
 .item a {
-  display: block;
-  padding: 10px;
-  font-size: 18px;
-  color: #2098a6;
   text-decoration: none;
-}
-
-/* Style per il buttons */
-.button {
-  background-color:white;
   color: #fff;
-  border-radius: 4px;
-  padding: 10px 20px;
-  margin-right: 10px;
-  text-transform: uppercase;
+  font-weight: bold;
 }
 
-/* Style per il secongo button */
-.secondary {
-  background-color: #f2f2f2;
-  color: #333;
+.item a:hover {
+  color: #007bff;
 }
 
-.secondary:hover {
-  background-color: #333;
-  color: #fff;
-}
 
-/* Style per il toggle button */
 .toggle {
+  display: none;
   cursor: pointer;
 }
 
-.bars {
+.toggle .bars {
   display: block;
-  width: 30px;
-  height: 5px;
-  background-color: #333;
+  width: 25px;
+  height: 3px;
+  background-color: #3f9ebd;
   margin: 5px 0;
 }
-.navbar {
-  position: fixed;
+
+
+
+
+.carousel {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.carousel-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.carousel-item {
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  background-color: #27b3b8;
-  padding: 20px;
-  z-index: 1;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+.carousel-item.active {
+  opacity: 1;
+}
+.carousel-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
